--- a/File Upload and Download/views/index.ejs
+++ b/File Upload and Download/views/index.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <form action="/upload" method="post">
+      <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="file">Upload File</label>
         <input type="file" id="file" name="file" />
         <button type="submit">Upload File</button>
