--- a/File Upload and Download/views/index.ejs
+++ b/File Upload and Download/views/index.ejs
@@ -6,6 +6,12 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <a href="/"><li>Home</li> </a>
+        <a href="/download"><li>Download</li></a>
+      </ul>
+    </nav>
     <div>
       <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="file">Upload File</label>
