--- a/File Upload and Download/views/download.ejs
+++ b/File Upload and Download/views/download.ejs
@@ -14,6 +14,6 @@
         </ul>
       </nav>
     
-    <button>Download</button>
+   <a href="/filedownload"> <button>Download</button></a>
 </body>
 </html>
